cmake_minimum_required(VERSION 3.28)
project(C_ LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

add_executable(First_Program First_Program.cpp)
add_executable(Test_file Test_file.cpp)
add_executable(Section4_29 Compiler_Errors.cpp)
add_executable(Section4_35 Section_Challenge1.cpp)
add_executable(Section5_42 InputandOutput.cpp)
add_executable(Section5_Exercise Coding_Exercise1.cpp)
add_executable(Section5_Exercise2 Coding_Exercie2.cpp)
add_executable(Section5_Exercise3 Coding_Exercise3.cpp)
