cmake_minimum_required(VERSION 3.28)
project(C_ LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

add_executable(First_Program First_Program.cpp)
add_executable(Test_file Test_file.cpp)
add_executable(Section4_29 Compiler_Errors.cpp)
add_executable(Section4_35 Section_Challenge1.cpp)
add_executable(Section5_42 InputandOutput.cpp)
add_executable(Section5_Exercise Coding_Exercise1.cpp)
add_executable(Section5_Exercise2 Coding_Exercie2.cpp)
add_executable(Section5_Exercise3 Coding_Exercise3.cpp)
add_executable(Section6_Exercise Declaring_Variables4.cpp)
add_executable(Section6_47 CPlusPlusPrimitiveTypes.cpp)
add_executable(Sizeof_48 SizeofVariable.cpp)
add_executable(Section6_50 Declaring_and_Using_constants.cpp)
add_executable(Section_challenge6 Section_Challenge6.cpp)
add_executable(Section_56Arrays Accessing_Modifying_arrays_element.cpp)
add_executable(Section7_Exercise Exercise5_Arrays.cpp)
add_executable(Section7_59Vectors Accessing_and_Modifying_Vector.cpp)
add_executable(Section_Challenge7 Section_Challange_7.cpp)
add_executable(The_Assignment_Operator Section_8/The_Assignment_Operator.cpp)
add_executable(Arithmetic_Operators Section_8/Arithmetic_Operators.cpp)
add_executable(Euros Euros_Project.cpp)
add_executable(Coding_Exercise7_section8 Section_8/Coding_Exercise7_section8.cpp)
add_executable(Coding_Exercise_8_Section_8 Section_8/Coding_Exercise_8_Section_8.cpp)
add_executable(Increment_and_Decrement_Operators Section_8/Increment_and_Decrement_Operators.cpp)
add_executable(Mixed_Expressioins_and_Conversions Section_8/Mixed_Expressioins_and_Conversions.cpp)
add_executable(Testing_for_Equality Section_8/Testing_for_Equality.cpp)
add_executable(Relational_Operators Section_8/Relational_Operators.cpp)
add_executable(Logical_Operators Section_8/Logical_Operators.cpp)
add_executable(Coding_Exercise_9 Section_8/Coding_Exercise_9.cpp)
add_executable(Section_Challenge8 Section_8/Section_Challenge8.cpp)
add_executable(Section_9 Section_9/If_statement.cpp)
add_executable(Section9.2 Section_9/if_and_else_statement.cpp)
add_executable(Section9_coding_exercise10 Section_9/Coding_Exercise_10.cpp)
add_executable(Coding_Exercise11 Section_9/Coding_Exercise11.cpp)
add_executable(Nested_if_statement Section_9/Nested_if_statement.cpp)
add_executable(Shipping_project Section_9/Shipping_project.cpp)
add_executable(Coding_Exercise12 Section_9/Coding_Exercise12.cpp)
add_executable(Switch_Case_Statement Section_9/Switch_Case_Statement.cpp)
add_executable(SwitchEnum Section_9/SwitchEnum.cpp)
add_executable(Coding_Exercise13 Section_9/Coding_Exercise13.cpp)
add_executable(Coditional_Operator Section_9/Coditional_Operator.cpp)
add_executable(For_loop Section_9/For_loop.cpp)
